Making dtos immutable records